--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MovieStoreNew</string>
     <string name="nav_item_title_home">Home</string>
     <string name="nav_item_title_watchlist">Watch list</string>
+    <string name="nav_item_title_search">Search</string>
 </resources>
